--- a/painter.html
+++ b/painter.html
@@ -43,6 +43,31 @@ function checkPainter(){
     }
 }
 </script>
+<div class="container">
+    <img src="Abroma.jpg" id="image" alt="Abroma plant" width="100" height="100" onclick="selectImage()">
+</div>
 
+<script>
+    var useImage = 1
+    function selectImage(){
+        switch(useImage){
+            case 1: document.getElementById("image").src="Abroma.jpg"
+            useImage = 2
+            break
+
+            case 2: document.getElementById("image").src="Lamium.jpg"
+            useImage = 3
+            break
+
+            case 3: document.getElementById("image").src="Orchid.jpg"
+            useImage = 1
+            break
+
+            default: document.getElementById("image").src="Abroma"
+            useImage = 2
+        }
+    }
+</script>
+<p>Click on the image for the next one</p>
 </body>
 </html> 
