--- a/candy.html
+++ b/candy.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Candy</title></head>
+    <head>
+        <title>Candy</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    </head>
  
 <body>
+<div class="container-fluid">
 
 <h1>Sai Chaitanya Vishnu Kanth chooses candy</h1>
 
 <form>
+<div class="form-group">
     <label for="form1_chocolate">Dark Chocolate</label>
-    <input type="checkbox" id="cg1_chocolate" value="True" name="candies"><br>
-
+    <input type="checkbox" id="cg1_chocolate" value="True" name="candies" class="form-control"><br>
+</div>
+<div class="form-group">
     <label for="form1_nuts">Nuts</label>
-    <input type="checkbox" id="cg1_nuts" value="True" name="candies"><br>
-
+    <input type="checkbox" id="cg1_nuts" value="True" name="candies" class="form-control"><br>
+</div>
+<div class="form-group">
     <label for="form1_chewy">Chewy</label>
-    <input type="checkbox" id="cg1_chewy" value="False" name="candies"><br><br>
-
+    <input type="checkbox" id="cg1_chewy" value="False" name="candies" class="form-control"><br><br>
+</div>
     <input type="button" value="Select a box" onclick="selectBox()">
 </form><br>
 
 
 <form>
+<div class="form-group">
     <label for="form2_size">Enter the size</label>
-    <input type="text" id="form2_size" value="size"><br>
-
+    <input type="text" id="form2_size" value="size" class="form-control"><br>
+</div>
+<div class="form-group">
     <label for="form2_price">Enter price</label>
-    <input type="text" id="form2_price"><br><br>
+    <input type="text" id="form2_price" class="form-control"><br><br>
+</div>
 
     <input type="button" value="Update the box" onclick="updateBox()">
 </form><br>
 
 <p id="form1_result">Changes are seen here</p>
+</div>
 <script>
     my_candy_box = {}
     function selectBox(){
