--- a/candy.html
+++ b/candy.html
@@ -18,15 +18,15 @@
 <form>
 <div class="form-group">
     <label for="form1_chocolate">Dark Chocolate</label>
-    <input type="checkbox" id="cg1_chocolate" value="True" name="candies" class="form-control"><br>
+    <input type="checkbox" id="cg1_chocolate" value="True" name="candies"><br>
 </div>
 <div class="form-group">
     <label for="form1_nuts">Nuts</label>
-    <input type="checkbox" id="cg1_nuts" value="True" name="candies" class="form-control"><br>
+    <input type="checkbox" id="cg1_nuts" value="True" name="candies"><br>
 </div>
 <div class="form-group">
     <label for="form1_chewy">Chewy</label>
-    <input type="checkbox" id="cg1_chewy" value="False" name="candies" class="form-control"><br><br>
+    <input type="checkbox" id="cg1_chewy" value="False" name="candies"><br><br>
 </div>
     <input type="button" value="Select a box" onclick="selectBox()">
 </form><br>
