--- a/conversions.html
+++ b/conversions.html
@@ -27,14 +27,14 @@
 
 <form>
 <div class="form-group">
-    <input type="radio" onclick="chooseOp()" id="rg1_avg" name="operation"  value="mean"  checked class="form-control">
+    <input type="radio" onclick="chooseOp()" id="rg1_avg" name="operation"  value="mean"  checked>
     <label for="average">average</label></br>
 </div>
 <div class="form-group">
     <input type="radio" onclick="chooseOp()" id="rg1_max" name="operation" value="maximum">
     <label for="max">max</label></br>
 </div>
-    <input type="radio" onclick="chooseOp()" id="rg1_min" name="operation" value="minimum" class="form-control">
+    <input type="radio" onclick="chooseOp()" id="rg1_min" name="operation" value="minimum">
     <label for="min">min</label></br>
 </div>
 </form>
